@@ -38,6 +38,8 @@
     Windows, and kB (1000 bytes) for others.
 21. Recolour repeat and shuffle icons to use button text colour - this is so
     that they always match consume and single icons.
+22. Re-enable animation when showing messagewidget, for Qt-only builds and
+    KDE builds prior to KDE4.9.4
 
 0.9.2
 -----
